syntax = "proto3";

package blog;
option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest{
    Blog blog = 1; // here id shouldn't matter
}

message CreateBlogResponse {
    Blog blog = 1; // her id will correspond to one stored in Mongo DB
}

message ReadBlogRequest {
    string blog_id =1;
}

message ReadBlogResponse {
    Blog blog = 2;
}

message UpdateBlogRequest {
    Blog blog = 1;
}

message UpdateBlogResponse {
    Blog blog = 1;
}

message DeleteBlogRequest {
    string blog_id = 1;
}

message DeleteBlogResponse {
    string blog_id = 1;
}

message ListBlogRequest {

}

message ListBlogResponse {
    Blog blog = 1;
}

service BlogService {
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};

    // Return Not Found if blog doesn't exist
    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {};

    // Return Not Found if blog doesn't exist
    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {};

    // Return Not Found if blog doesn't exist
    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {};

    rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse) {};

}
